# HelloVulkanSDL

./: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md
.submodules/: RunMeToSetUpSubModule.sh
AddOns/3DObjects/: Quad2D.cpp  Quad2DColored.cpp  Quad2DTextureTinted.cpp  Quad2DTextured.cpp  Triangle2DColored.cpp
Adjunct/3DObjects/: Quad2D.cpp  Quad2DColored.cpp  Quad2DTextureTinted.cpp  Quad2DTextured.cpp  Triangle2DColored.cpp
CMakeLinux/: CMakeLists.txt  README.md
CMakeLinux/src/: PlatformSpecifics.h
CMakeRasPi/: CMakeLists.txt  README.md  src
VisualStudio/: CPPaccompaniedHfileDirectories.props  HelloTriangle.vcxproj  HelloTriangle.vcxproj.filters  HelloVulkanSDL.sln  README.md  setup1st.bat
VisualStudio/src/: LocalFileSystem.cpp  LocalFileSystem.h  PlatformConstants.h  PlatformSpecifics.h  optional.h
Xcode/: README.md  setup1st.sh
Xcode/HelloVulkanSDL.xcodeproj/: project.pbxproj
Xcode/Resources/iOS/: Info.plist  LaunchScreen.storyboard
Xcode/Resources/iOS/Images.xcassets/AppIcon.appiconset/: Contents.json
Xcode/Resources/iOS/Images.xcassets/Splash.imageset/: Contents.json
Xcode/Resources/macOS/: Info.plist
Xcode/iOSFrameworks/: ReadMe.md  iOSFrameworksBuild.sh
Xcode/iOSFrameworks/SDL-iOS/: SDL-iOS.h  module.modulemap
Xcode/iOSFrameworks/SDL-iOS.xcodeproj/: project.pbxproj
Xcode/iOSFrameworks/SDL_image-iOS/: SDL_image-iOS.h  module.modulemap
Xcode/iOSFrameworks/SDL_image-iOS.xcodeproj/: project.pbxproj
Xcode/src/: Apple-specific_code_herein  LocalFileSystem.cpp  LocalFileSystem.h  LocalVkEnumerateInstanceVersion.cpp  PlatformConstants.h  PlatformSpecifics.h  optional.h
graphics/meshObjects/: Quad2D.cpp  Quad2DTextured.cpp
graphics/shaders/: 09_shader_base.vert  21_shader_ubo.vert  25_shader_textures.frag  25_shader_textures.vert  FullScreenTriangle.vert  TexturedQuad.frag  basicPlaid.frag  compileLinux.sh  tjVolcanic.frag
src/: AppConstants.h  HelloTriangle.cpp  HelloTriangle.h  main.cpp
src/Extras/: OtherDrawables.cpp  OtherDrawables.h
src/Platform/: FileSystem.cpp  FileSystem.h  PlatformCommon.cpp  PlatformExtension.h
src/Platform/ImageHandling/: ImageSDL.h  ImageSTB.h  iImageSource.h  sdlEquivalents.h
src/Platform/OSAbstraction/: PlatformGLFW.cpp  PlatformGLFW.h  PlatformSDL.cpp  PlatformSDL.h  PlatformXCB.h  iPlatform.h
src/Settings/: AppSettings.cpp  AppSettings.h  json.hpp  jsonConvert.c  jsonConvert_c.h
src/Vulkan/AddOns/: BufferBase.h  CommandBufferBase.h  Descriptors.cpp  Descriptors.h  Mipmaps.h  PrimitiveBuffer.cpp  PrimitiveBuffer.h  TextureImage.cpp  TextureImage.h  UniformBuffer.cpp  UniformBuffer.h  UniformBufferObjects.h
src/Vulkan/AddOns/3DObjects/: Quad2DTextured.cpp  VertexBasedObject.h
src/Vulkan/AddOns/VertexTypes/: Vertex2D.h  Vertex2DColored.h  Vertex2DTextureTinted.h  Vertex2DTextured.h  VertexNull.h  VertexType.h  VertexTypes.cpp
src/Vulkan/Assist/: DebugReport.cpp  DebugReport.h  DeviceAssessment.cpp  DeviceAssessment.h  DeviceProfile.h  DeviceRanking.cpp  DeviceRanking.h  Helpers.h  Utility.cpp  Utility.h  ValidationLayers.cpp  ValidationLayers.h  VulkanPlatform.h  vkEnumStrings.cpp
src/Vulkan/Objects/: CommandObjects.cpp  CommandObjects.h  DeviceQueues.cpp  DeviceQueues.h  Framebuffers.cpp  Framebuffers.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsPipeline.cpp  GraphicsPipeline.h  RenderPass.cpp  RenderPass.h  ShaderModules.cpp  ShaderModules.h  Swapchain.cpp  Swapchain.h  SyncObjects.cpp  SyncObjects.h  VulkanInstance.cpp  VulkanInstance.h  WindowSurface.cpp  WindowSurface.h
src/Vulkan/Setup/: RenderSettings.h  Shader.h  VulkanConfigure.h  VulkanSetup.cpp  VulkanSetup.h  VulkanSingleton.h
src/shaders/: 17_shader_vertexbuffer.vert  FullScreenTriangle.vert  NOTES.txt  TexturedQuad.vert  compile.bat  compile.sh  compileLinux.sh
